# couch

./: .gitignore  CMakeLists.txt  CORRESPONDINGSOURCE.txt  Makefile  cmake-builds.sh  common.mk  main.lua  package.sh  roadmap.md
cmake/modules/: FindASSIMP.cmake
core/: Ball.cpp  Ball.h  CMakeLists.txt  Camera.cpp  Camera.h  CollisionShape.cpp  CollisionShape.h  Drawable.h  Framebuffer.cpp  Framebuffer.h  Index.cpp  Index.h  Input.cpp  Input.h  Light.cpp  Light.h  Lua.cpp  Makefile  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Rigidbody.cpp  Rigidbody.h  Screen.cpp  Screen.h  ScriptingLanguage.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Spatial.cpp  Spatial.h  Transform.cpp  Transform.h  Util.cpp  Util.h  Vertex.cpp  (+10 more)
core/Scripting/: Guile.cpp  Guile.h  Lua.cpp  Lua.h  ScriptingLanguage.cpp  ScriptingLanguage.h
core/Shaders/: FlatShader.cpp  FlatShader.h  ScreenShader.cpp  ScreenShader.h  Shader.cpp  Shader.h  SkyboxShader.cpp  SkyboxShader.h
demo/: ball.glb  cube.glb  ground.mtl  main.lua  scaffold.glb  trough.glb
demo/exampleworld/: main.lua
demo/inabox/: main.lua
demo/resources/: ball.glb  barn.glb  barn.mtl  capsule.glb  ground.glb  inverted_cube.glb  scaffold.glb  scaffold.mtl  trough.glb  trough.mtl
demo/scm/exampleworld/: main.scm
demo/scripts/: freecam.lua
demo/shooter/: main.lua
scripting/: .gitignore  CMakeLists.txt  Makefile  couch.i
scripting/lua/: helpers.i
shaders/: CMakeLists.txt  flat.frag  flat.vert  makeheaders.pl  screen.frag  screen.vert  skybox.frag  skybox.vert
